@@ -2,6 +2,8 @@
 
 	* src/SDCClospre.cc:
 	  Improve handling of ADDRESS_OF.
+	* support/regression/tests/bug-2957.c:
+	  Test for bug #2957.
 
 2019-12-02 Philipp Klaus Krause <pkk AT spth.de>
 
